--- a/randomart.cabal
+++ b/randomart.cabal
@@ -25,12 +25,16 @@ executable randomart
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+      AST
+      Render
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
     build-depends:
       base ^>=4.16.4.0,
-      hip ^>=1.5.6.0
+      hip ^>=1.5.6.0,
+      random ^>=1.2.1.1,
+      MonadRandom ^>=0.6
     hs-source-dirs:   app
     default-language: Haskell2010
